<?xml version="1.0"?>
<package>
  <name>win_python_build_tools</name>
  <version>0.1.0</version>
  <description>Collects all the ros python build tools packages together in one installer</description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/win_python_build_tools</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- <export></export> -->
</package>