<?xml version="1.0"?>
<package>
  <name>win_python_build_tools</name>
  <version>0.1.0</version>
  <description>
    Collects all the ros python build tools packages together in 
    one installer
  </description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/win_python_build_tools</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- <export></export> -->
  
  <!-- custom built dependencies -->
  <build_depend>win_dateutil</build_depend>
  <build_depend>win_pymercurial</build_depend>
  <build_depend>win_pyyaml</build_depend>

  <!-- rosdeps -->
  <build_depend>python</build_depend>
  <build_depend>python-setuptools</build_depend>
  <build_depend>python-win32</build_depend>
  <build_depend>pysvn</build_depend>
  
</package>